// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/MenuPanel Dark 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
  height: 100vh;
  padding: 0;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 20px;
  width: 20px;
  -webkit-flex: 0 0 20px;
  -ms-flex: 0 0 20px;
  flex: 0 0 20px;
  color: #FFF;
}

.c11 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c3 {
  color: #FFF;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #FFF;
}

.c3:hover {
  background-color: #FFF;
  color: #252525;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c6 {
  position: relative;
  color: #FFF;
  width: 100%;
}

.c7 {
  font-size: 16px;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  color: inherit;
  background-color: rgba(255,255,255,0.1);
  border: 1px solid #FFF;
  border-radius: 25px;
  height: 50px;
  padding: 0 78px 0 22px;
  outline: none;
  width: 100%;
}

.c7::-webkit-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c7::-moz-placeholder {
  color: inherit;
  font-style: italic;
}

.c7:-ms-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c7::placeholder {
  color: inherit;
  font-style: italic;
}

.c8 {
  position: absolute;
  right: 20px;
  top: 12px;
}

.c13 {
  height: 1px;
  background-color: #FFF;
  margin: 20px 30px;
}

.c10 {
  outline: none;
  border: none;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  padding: 18px 30px;
  text-align: left;
  background-color: transparent;
  color: #FFF;
  width: 100%;
  text-transform: uppercase;
  cursor: pointer;
  font-weight: 700;
  font-size: 24px;
}

.c10:hover .c12 {
  opacity: 1;
}

.c14 {
  outline: none;
  border: none;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  padding: 18px 30px;
  text-align: left;
  background-color: transparent;
  color: #FFF;
  width: 100%;
  text-transform: uppercase;
  cursor: pointer;
  font-weight: 700;
  font-size: 22px;
}

.c14:hover .c12 {
  opacity: 1;
}

.c1 {
  background-color: #252525;
  width: 360px;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  height: 97px;
  padding: 20px 20px 27px 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c9 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c5 {
  padding: 0 30px;
  margin-bottom: 40px;
}

@media screen and (max-width:767px) {
  .c3 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
      width="360px"
    >
      <div
        className="c2"
      >
        <button
          aria-label="close"
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
            size="26px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h48v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(1 1)"
              >
                <path
                  d="M46.236 48c-.472 0-.916-.184-1.25-.518L24 26.495 3.012 47.485c-.316.316-.731.497-1.175.515h-.073a1.767 1.767 0 0 1-1.248-3.013l20.988-20.988L.516 3.012a1.767 1.767 0 0 1 0-2.496A1.754 1.754 0 0 1 1.764 0c.471 0 .915.184 1.248.516L24 21.503 44.986.516A1.754 1.754 0 0 1 46.234 0c.472 0 .915.184 1.248.516a1.767 1.767 0 0 1 0 2.496L26.496 23.999l20.989 20.988A1.767 1.767 0 0 1 46.236 48"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <input
            className="c7"
            defaultValue=""
            onChange={[Function]}
            type="text"
          />
          <span
            className="c4 c8"
            size="26px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h47.956v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
              >
                <g
                  transform="translate(1 1)"
                >
                  <path
                    d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                    fill="currentColor"
                  />
                </g>
                <path
                  d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
      <div
        className="c9"
      >
        <button
          className="c10"
        >
          Azienda
          <span
            className="c11 c12 "
            color="white"
            size="20px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h25.722v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(12 1)"
              >
                <path
                  d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </button>
        <button
          className="c10"
        >
          Prodotti
          <span
            className="c11 c12 "
            color="white"
            size="20px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h25.722v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(12 1)"
              >
                <path
                  d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </button>
        <button
          className="c10"
        >
          Case History
          <span
            className="c11 c12 "
            color="white"
            size="20px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h25.722v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(12 1)"
              >
                <path
                  d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </button>
        <button
          className="c10"
        >
          News ed eventi
          <span
            className="c11 c12 "
            color="white"
            size="20px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h25.722v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(12 1)"
              >
                <path
                  d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </button>
        <div
          className="c13"
        />
        <button
          className="c14"
        >
          Carriere
          <span
            className="c11 c12 "
            color="white"
            size="20px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h25.722v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(12 1)"
              >
                <path
                  d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </button>
        <button
          className="c14"
        >
          Contatti
          <span
            className="c11 c12 "
            color="white"
            size="20px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h25.722v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(12 1)"
              >
                <path
                  d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/MenuPanel Light 1`] = `
.c6 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #6D6E70;
  margin: 0;
}

.c6 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #6D6E70;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c3 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 30px;
  width: 30px;
  -webkit-flex: 0 0 30px;
  -ms-flex: 0 0 30px;
  flex: 0 0 30px;
  color: #6D6E70;
}

.c10 > svg {
  height: 100%;
  width: 100%;
  color: primary;
}

.c5 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 18px;
  padding: 0px 32px;
  height: 50px;
  color: #FFF;
  background-color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c5:hover {
  color: #6D6E70;
  background-color: #FFF;
}

.c2 {
  color: #6D6E70;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #6D6E70;
}

.c2:hover {
  background-color: #6D6E70;
  color: #FFF;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c12 {
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-out;
  transition: opacity 0.2s ease-out;
}

.c9 {
  outline: none;
  border: none;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  padding: 0 60px;
  text-align: left;
  background-color: transparent;
  color: #6D6E70;
  width: 100%;
  text-transform: none;
  cursor: pointer;
  font-weight: 500;
  font-size: 22px;
  border-top: 1px solid #d8d8d8;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c9:hover .c11 {
  opacity: 1;
}

.c9:hover {
  background-color: #FFF;
}

.c0 {
  background-color: #F5F5F5;
  width: 500px;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 97px;
  padding: 20px 20px 27px 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c8 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c4 {
  padding: 0 60px;
  margin-bottom: 40px;
}

.c7 {
  text-transform: uppercase;
  padding: 0 60px;
  margin-bottom: 15px;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 a {
    font-size: 14px;
  }
}

@media screen and (max-width:767px) {
  .c2 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
  width="500px"
>
  <div
    className="c1"
  >
    <button
      aria-label="close"
      className="c2"
      onClick={[Function]}
    >
      <span
        className="c3"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h48v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <path
              d="M46.236 48c-.472 0-.916-.184-1.25-.518L24 26.495 3.012 47.485c-.316.316-.731.497-1.175.515h-.073a1.767 1.767 0 0 1-1.248-3.013l20.988-20.988L.516 3.012a1.767 1.767 0 0 1 0-2.496A1.754 1.754 0 0 1 1.764 0c.471 0 .915.184 1.248.516L24 21.503 44.986.516A1.754 1.754 0 0 1 46.234 0c.472 0 .915.184 1.248.516a1.767 1.767 0 0 1 0 2.496L26.496 23.999l20.989 20.988A1.767 1.767 0 0 1 46.236 48"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </button>
  </div>
  <div
    className="c4"
  >
    <button
      className="c5"
      size="large"
      type="button"
    >
      Visualizza tutti
    </button>
  </div>
  <p
    className="c6 c7"
    color="primary"
  >
    Famiglie di prodotto
  </p>
  <div
    className="c8"
  >
    <button
      className="c9"
    >
      Elettromandrini
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Teste a 1 e 2 assi
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Asse C
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Aggregati
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Elettromandrini MT
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Foratrici
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Gruppi multifunzione
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Smart Motors
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Layout/MenuPanel Primary 1`] = `
.c8 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
  margin: 0;
}

.c8 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c3 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 30px;
  width: 30px;
  -webkit-flex: 0 0 30px;
  -ms-flex: 0 0 30px;
  flex: 0 0 30px;
  color: #FFF;
}

.c12 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c2 {
  color: #FFF;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #FFF;
}

.c2:hover {
  background-color: #FFF;
  color: #6D6E70;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c5 {
  position: relative;
  color: #FFF;
  width: 100%;
}

.c6 {
  font-size: 16px;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  color: inherit;
  background-color: rgba(255,255,255,0.1);
  border: 1px solid #FFF;
  border-radius: 25px;
  height: 50px;
  padding: 0 78px 0 22px;
  outline: none;
  width: 100%;
}

.c6::-webkit-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c6::-moz-placeholder {
  color: inherit;
  font-style: italic;
}

.c6:-ms-input-placeholder {
  color: inherit;
  font-style: italic;
}

.c6::placeholder {
  color: inherit;
  font-style: italic;
}

.c7 {
  position: absolute;
  right: 20px;
  top: 12px;
}

.c14 {
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-out;
  transition: opacity 0.2s ease-out;
}

.c11 {
  outline: none;
  border: none;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  padding: 35px 70px;
  text-align: left;
  background-color: transparent;
  color: #FFF;
  width: 100%;
  text-transform: uppercase;
  cursor: pointer;
  font-weight: 700;
  font-size: 40px;
}

.c11:hover .c13 {
  opacity: 1;
}

.c0 {
  background-color: #6D6E70;
  width: 500px;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 97px;
  padding: 20px 20px 27px 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c10 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c4 {
  padding: 0 70px;
  margin-bottom: 40px;
}

.c9 {
  text-transform: uppercase;
  padding: 0 70px;
  margin-bottom: 15px;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 a {
    font-size: 14px;
  }
}

@media screen and (max-width:767px) {
  .c2 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
  width="500px"
>
  <div
    className="c1"
  >
    <button
      aria-label="close"
      className="c2"
      onClick={[Function]}
    >
      <span
        className="c3"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h48v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <path
              d="M46.236 48c-.472 0-.916-.184-1.25-.518L24 26.495 3.012 47.485c-.316.316-.731.497-1.175.515h-.073a1.767 1.767 0 0 1-1.248-3.013l20.988-20.988L.516 3.012a1.767 1.767 0 0 1 0-2.496A1.754 1.754 0 0 1 1.764 0c.471 0 .915.184 1.248.516L24 21.503 44.986.516A1.754 1.754 0 0 1 46.234 0c.472 0 .915.184 1.248.516a1.767 1.767 0 0 1 0 2.496L26.496 23.999l20.989 20.988A1.767 1.767 0 0 1 46.236 48"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </button>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <input
        className="c6"
        defaultValue=""
        onChange={[Function]}
        type="text"
      />
      <span
        className="c3 c7"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h47.956v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                fill="currentColor"
              />
            </g>
            <path
              d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
  <p
    className="c8 c9"
    color="light"
  >
    Macrocategoria
  </p>
  <div
    className="c10"
  >
    <button
      className="c11"
    >
      Famiglie di prodotto
      <span
        className="c12 c13 c14"
        color="white"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c11"
    >
      Tecnologia
      <span
        className="c12 c13 c14"
        color="white"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Layout/MenuPanel Secondary 1`] = `
.c6 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #6D6E70;
  margin: 0;
}

.c6 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #6D6E70;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c3 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 30px;
  width: 30px;
  -webkit-flex: 0 0 30px;
  -ms-flex: 0 0 30px;
  flex: 0 0 30px;
  color: #6D6E70;
}

.c10 > svg {
  height: 100%;
  width: 100%;
  color: primary;
}

.c5 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 18px;
  padding: 0px 32px;
  height: 50px;
  color: #FFF;
  background-color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c5:hover {
  color: #6D6E70;
  background-color: #FFF;
}

.c2 {
  color: #6D6E70;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #6D6E70;
}

.c2:hover {
  background-color: #6D6E70;
  color: #FFF;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c12 {
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-out;
  transition: opacity 0.2s ease-out;
}

.c9 {
  outline: none;
  border: none;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  padding: 30px 60px;
  text-align: left;
  background-color: transparent;
  color: #6D6E70;
  width: 100%;
  text-transform: uppercase;
  cursor: pointer;
  font-weight: 700;
  font-size: 30px;
}

.c9:hover .c11 {
  opacity: 1;
}

.c0 {
  background-color: #6D6E70;
  width: 500px;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 97px;
  padding: 20px 20px 27px 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c8 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c4 {
  padding: 0 60px;
  margin-bottom: 40px;
}

.c7 {
  text-transform: uppercase;
  padding: 0 60px;
  margin-bottom: 15px;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 a {
    font-size: 14px;
  }
}

@media screen and (max-width:767px) {
  .c2 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
  width="500px"
>
  <div
    className="c1"
  >
    <button
      aria-label="close"
      className="c2"
      onClick={[Function]}
    >
      <span
        className="c3"
        size="26px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h48v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <path
              d="M46.236 48c-.472 0-.916-.184-1.25-.518L24 26.495 3.012 47.485c-.316.316-.731.497-1.175.515h-.073a1.767 1.767 0 0 1-1.248-3.013l20.988-20.988L.516 3.012a1.767 1.767 0 0 1 0-2.496A1.754 1.754 0 0 1 1.764 0c.471 0 .915.184 1.248.516L24 21.503 44.986.516A1.754 1.754 0 0 1 46.234 0c.472 0 .915.184 1.248.516a1.767 1.767 0 0 1 0 2.496L26.496 23.999l20.989 20.988A1.767 1.767 0 0 1 46.236 48"
              fill="currentColor"
            />
          </g>
        </svg>
      </span>
    </button>
  </div>
  <div
    className="c4"
  >
    <button
      className="c5"
      size="large"
      type="button"
    >
      Visualizza tutti
    </button>
  </div>
  <p
    className="c6 c7"
    color="primary"
  >
    Materiale
  </p>
  <div
    className="c8"
  >
    <button
      className="c9"
    >
      Metallo
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Legno
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Vetro
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Pietra
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      Compositi
      <span
        className="c10 c11 c12"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Layout/MenuPanel White 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
  height: 100vh;
  padding: 0;
}

.c5 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #6D6E70;
  margin: 0;
}

.c5 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #6D6E70;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 26px;
  width: 26px;
  -webkit-flex: 0 0 26px;
  -ms-flex: 0 0 26px;
  flex: 0 0 26px;
  color: inherit;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c3 {
  color: #6D6E70;
  background-color: transparent;
  outline: none !important;
  cursor: pointer;
  padding: 0;
  width: 50px;
  height: 50px;
  border: 1px solid #6D6E70;
}

.c3:hover {
  background-color: #6D6E70;
  color: #FFF;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.c8 {
  outline: none;
  border: none;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  padding: 0 60px;
  text-align: left;
  background-color: transparent;
  color: #6D6E70;
  width: 100%;
  text-transform: uppercase;
  cursor: pointer;
  font-weight: 700;
  font-size: 24px;
}

.c1 {
  background-color: #FFF;
  width: 500px;
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  height: 97px;
  padding: 20px 20px 27px 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: auto;
}

.c6 {
  text-transform: uppercase;
  padding: 0 60px;
  margin-bottom: 15px;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c5 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c5 a {
    font-size: 14px;
  }
}

@media screen and (max-width:767px) {
  .c3 {
    width: 40px;
    height: 40px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
      width="500px"
    >
      <div
        className="c2"
      >
        <button
          aria-label="close"
          className="c3"
          onClick={[Function]}
        >
          <span
            className="c4"
            size="26px"
          >
            <svg
              viewBox="0 0 50 50"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M0 0h48v48H0z"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
                transform="translate(1 1)"
              >
                <path
                  d="M46.236 48c-.472 0-.916-.184-1.25-.518L24 26.495 3.012 47.485c-.316.316-.731.497-1.175.515h-.073a1.767 1.767 0 0 1-1.248-3.013l20.988-20.988L.516 3.012a1.767 1.767 0 0 1 0-2.496A1.754 1.754 0 0 1 1.764 0c.471 0 .915.184 1.248.516L24 21.503 44.986.516A1.754 1.754 0 0 1 46.234 0c.472 0 .915.184 1.248.516a1.767 1.767 0 0 1 0 2.496L26.496 23.999l20.989 20.988A1.767 1.767 0 0 1 46.236 48"
                  fill="currentColor"
                />
              </g>
            </svg>
          </span>
        </button>
      </div>
      <p
        className="c5 c6"
        color="primary"
      >
        Linee di prodotto
      </p>
      <div
        className="c7"
      >
        <button
          className="c8"
        >
          ES7 Line
        </button>
        <button
          className="c8"
        >
          ES8 Line S
        </button>
      </div>
    </div>
  </div>
</div>
`;
